# python-office-mcp-server

./: .gitignore  README.md  aioumcp.py  build-standalone.ps1  build_onefile.py  build_windows_onefile.py  installer.iss  office_server.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: build-windows.yml  prune-actions-artifacts.yml
docs/: excel-ooxml-format-research.md  pptx-ooxml-comments-research.md  word-ooxml-track-changes-research.md
tests/: __init__.py  conftest.py  probe_exe_stdio.py  probe_stdio_handshake.py  run_binary_suite.py  run_tests.sh  test_advanced_edge_cases.py  test_aioumcp_validation.py  test_azure_pricing_tools.py  test_bugfix_round2.py  test_comment_tools_e2e.py  test_comprehensive_paths.py  test_coverage_boost.py  test_edge_cases.py  test_eighty_percent.py  test_error_paths.py  test_excel_advanced_tools.py  test_excel_charts.py  test_excel_tools.py  test_extended_ops.py  test_final_coverage.py  test_final_push.py  test_fixture_files_not_encrypted.py  test_high_volume.py  test_image_insertion.py  test_metadata_cache.py  test_more_coverage.py  test_mutation_diagnostics.py  test_mutation_modes.py  test_office_help.py  test_office_unified_tools.py  test_path_variations.py  test_pptx_advanced_tools.py  test_pptx_advanced_tools_extended.py  test_pptx_coverage.py  test_pptx_tools.py  test_strategic_coverage.py  test_targeted_coverage.py  test_tools_extended.py  test_track_change_reading.py  (+15 more)
tests/_templates/: default.docx  default.pptx
tests/_templates/testdata/excel/: comments.xlsx  conditional_format.xlsx  data_types.xlsx  formatting.xlsx  formulas.xlsx  merged_cells.xlsx  minimal.xlsx  multiple_sheets.xlsx  named_ranges.xlsx  single_cell.xlsx  tables.xlsx
tests/_templates/testdata/pptx/: bullet_points.pptx  comments.pptx  hidden_slides.pptx  images.pptx  layouts.pptx  minimal.pptx  multiple_masters.pptx  notes.pptx  (+3 more)
tools/: __init__.py  azure_pricing_tools.py  diagnostics.py  discovery_tools.py  excel_advanced_tools.py  excel_tools.py  markdown_parser.py  metadata_cache.py  office_unified_tools.py  pptx_advanced_tools.py  pptx_tools.py  save_utils.py  web_tools.py  word_advanced_tools.py  word_tools.py
(+13 files in other folders)
