[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.hatch.build.targets.wheel.force-include]
"office_server.py" = "office_server.py"
"aioumcp.py" = "aioumcp.py"

[project]
name = "mcp-document-server"
version = "0.1.0"
description = "MCP server for document processing with SOW tools"
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",
    "lxml>=5.0.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "chardet<6",
    "readability-lxml>=0.8.1",
    "markdownify>=0.12.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
office-mcp-server = "office_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
build = [
    "pyinstaller>=6.0.0",
]
web = [
    "requests>=2.31.0",
    "chardet<6",
    "readability-lxml>=0.8.1",
    "markdownify>=0.12.0",
    "beautifulsoup4>=4.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict=
    "ARG001", # unused function argument (common in tool signatures)
    "ARG002", # unused method argument
    "SIM108", # use ternary operator (sometimes less readable)
]

[tool.ruff.lint.isort]
known-first-party = ["tools"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
